--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -38,16 +38,16 @@
   }
 
   &__heading {
-    margin-top:100px;
-    @media(min-width: 1920px) {
-      margin-top:170px;
-    }
-    @media(max-width: 1023px) {
-      margin-top:90px;
-    }
-    @media(max-width: 767px) {
-      margin-top:60px;
-    }
+    // margin-top:100px;
+    // @media(min-width: 1920px) {
+    //   margin-top:170px;
+    // }
+    // @media(max-width: 1023px) {
+    //   margin-top:90px;
+    // }
+    // @media(max-width: 767px) {
+    //   margin-top:60px;
+    // }
     &_white {
       color:white;
       text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
