--- a/site/templates/src/less/about.less
+++ b/site/templates/src/less/about.less
@@ -1,22 +1,58 @@
+@keyframes arrow-animate {
+  25% {
+    transform:translateX(-50%) scale(1);
+  }
+  50% {
+    transform:translateX(-50%) scale(1.2);
+  }
+  75% {
+    transform:translateX(-50%) scale(1);
+  }
+}
 .about {
   position:relative;
-  &:after {
-    content:"";
+  &__arrow {
+    border-radius: 50%;
+    border:2px solid #bbbbbb;
     position:absolute;
+    z-index:1;
+    display:block;
     bottom:30px;
     left:50%;
     width:50px;
     height:50px;
-    background-repeat:no-repeat;
-    background-size:contain;
-    background-position: 50% 50%;
-    background-image:url(../img/next.svg);
-    transform:translateX(-50%) rotate(90deg);
+    // background-repeat:no-repeat;
+    // background-size:50% auto;
+    // background-position: 75% 50%;
+    // background-image:url(../img/next.svg);
+    transform:translateX(-50%);
+    animation: arrow-animate 2s ease-out infinite;
     @media(min-width: 1920px) {
       left:25%;
     }
     @media(max-width: 1023px) {
       display:none;
+    }
+    &:before {
+      content:"";
+      position:absolute;
+      height:20px;
+      width:20px;
+      border-bottom:2px solid #bbbbbb;
+      border-right:2px solid #bbbbbb;
+      left:50%;
+      top:50%;
+      transform:translate(-50%,-50%) rotate(45deg);
+    }
+    &:after {
+      content:"";
+      position:absolute;
+      left:50%;
+      top:50%;
+      height:28px;
+      width:2px;
+      background-color:#bbbbbb;
+      transform:translate(-50%,-50%);
     }
   }
   &__grid {
