--- a/site/templates/src/less/sertificates.less
+++ b/site/templates/src/less/sertificates.less
@@ -54,7 +54,7 @@
     background-size:contain;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    background-image:url(../img/arrow.svg);
+    background-image:url(../img/right-arrow.svg);
     @media(max-width: 959px) {
       width:30px;
       height:30px;
