--- a/site/templates/src/less/prices.less
+++ b/site/templates/src/less/prices.less
@@ -60,6 +60,11 @@
       width:100%;
     }
   }
+  &__footer {
+    margin-top:60px;
+    font-size:12px;
+    line-height: 18px;
+  }
 }
 
 .prices-block {
@@ -103,6 +108,27 @@
     margin-top:10px;
     font-size:18px;
     line-height: 24px;
+  }
+  &__button-wrapper {
+    text-align: center;
+    margin-top:30px;
+  }
+  &__button {
+    display:inline-block;
+    font-family: "Oswald",arial,sans-serif;
+    font-size:16px;
+    line-height: 16px;
+    border:2px solid #4dd1e3;
+    background-color:#4dd1e3;
+    color:white;
+    padding:15px 75px;
+    text-transform: uppercase;
+    font-weight: 500;
+    transition:all 0.2s;
+    &:hover {
+      color:#4dd1e3;
+      background-color:transparent;
+    }
   }
   ul {
     margin-top:15px;
