--- a/site/templates/src/less/prices.less
+++ b/site/templates/src/less/prices.less
@@ -68,6 +68,10 @@
 }
 
 .prices-block {
+  height:100%;
+  padding-bottom:80px;
+  position:relative;
+  box-sizing: border-box;
   &__grid {
     display:flex;
     position:relative;
@@ -111,7 +115,10 @@
   }
   &__button-wrapper {
     text-align: center;
-    margin-top:30px;
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
   }
   &__button {
     display:inline-block;
