--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -146,6 +146,7 @@
     border-bottom:2px solid #000;
     margin-top:30px;
     transition:all 0.2s;
+    text-transform: uppercase;
     &:hover {
       color:#00BCD6;
       border-color:#00BCD6;
