--- a/site/templates/src/less/review.less
+++ b/site/templates/src/less/review.less
@@ -4,6 +4,7 @@
     width:~"calc(50% - 30px)";
     position:fixed;
     padding: 0 60px;
+    padding-right: 120px;
     left:60px;
     top:181px;
     opacity:0;
@@ -56,8 +57,8 @@
   &__text {
     font-style:italic;
     font-weight: 300;
-    font-size:20px;
-    line-height: 28px;
+    font-size:16px;
+    line-height: normal;
     position:relative;
     margin-top:45px;
     z-index:1;
